[package]
name = "ffnix_rust"
version = "0.1.0"
authors = ["Kunal Bhat <kunal.bhat2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86_64-ffnix.json"